# loan-app-rust-project

./: Cargo.toml  diesel.toml
migrations/2024-07-23-132757_users/: up.sql
migrations/2024-07-23-132813_loans/: up.sql
migrations/2024-08-03-073517_user_roles/: up.sql
migrations/2024-08-03-073622_loan_payment/: down.sql  up.sql
migrations/2024-08-03-080030_loan_permissions/: up.sql
src/: main.rs  schema.rs
src/controllers/: home.rs  loans.rs  mod.rs  users.rs
src/db_operations/: db.rs  loans.rs  mod.rs  users.rs
src/models/: app_state.rs  loans.rs  mod.rs  ui.rs  users.rs
static/css/: dashboard.css  style.css  table.css
templates/: dashboard.html  get_loan.html  index.html  login.html  register.html
