[package]
name = "diesel-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.1", features = ["postgres","chrono", "numeric"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-files = "0.6.6"
actix-web-lab = "0.20.2"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4.22"
cargo-watch = "8.5.2"
actix-identity="0.7.1"
askama = "0.12.1"
bcrypt = "0.15.1"
bigdecimal = { version = "0.4", features = ["serde"] }



